--- a/cloudwatch-logging/templates/openshift-cloudwatch-logging.yaml
+++ b/cloudwatch-logging/templates/openshift-cloudwatch-logging.yaml
@@ -7,7 +7,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "0"
 
 stringData:
-  role_arn: "arn:aws:iam::__AWS_ACCOUNT_ID__:role/__CLUSTER_NAME__-RosaClusterWatchLogging"
+  role_arn: "arn:aws:iam::376135008091:role/rosagandolf-RosaClusterWatchLogging"
 ---
 apiVersion: "logging.openshift.io/v1"
 kind: ClusterLogForwarder
