--- a/cloudwatch-metrics/templates/openshift-cloudwatch-metrics.yaml
+++ b/cloudwatch-metrics/templates/openshift-cloudwatch-metrics.yaml
@@ -32,14 +32,14 @@ data:
   cwagentconfig.json: |
     {
       "agent": {
-        "region": "__REGION__",
+        "region": "us-east-2",
         "debug": true
       },
       "logs": {
         "metrics_collected": {
           "prometheus": {
-            "cluster_name": "__CLUSTER_NAME__",
-            "log_group_name": "/aws/containerinsights/__CLUSTER_NAME__/prometheus",
+            "cluster_name": "rosagandolf",
+            "log_group_name": "/aws/containerinsights/rosagandolf/prometheus",
             "prometheus_config_path": "/etc/prometheusconfig/prometheus.yaml",
             "emf_processor": {
               "metric_declaration": [
