--- a/argocd/applications/cloudwatch-logging.yaml
+++ b/argocd/applications/cloudwatch-logging.yaml
@@ -8,15 +8,15 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/open-sudo/rosa-idp.git
+    repoURL: https://github.com/unvme331/rosa-idp.git
     targetRevision: HEAD
     path: cloudwatch-logging
     helm:
       values: |
         installCRDs: true
-        rosa.region: __REGION__
-        rosa.name: __CLUSTER_NAME__
-        aws.cloudwatch.roleArn: "arn:aws:iam::__AWS_ACCOUNT_ID__:role/__CLUSTER_NAME__-RosaClusterWatchLogging"
+        rosa.region: us-east-2
+        rosa.name: rosagandolf
+        aws.cloudwatch.roleArn: "arn:aws:iam::376135008091:role/rosagandolf-RosaClusterWatchLogging"
 
   destination:
     server: https://kubernetes.default.svc
