--- a/dbaas/rds-connections/external-secrets-and-store.yaml
+++ b/dbaas/rds-connections/external-secrets-and-store.yaml
@@ -9,7 +9,7 @@ spec:
   provider:
     aws:
       service: SecretsManager
-      region: __REGION__
+      region: us-east-2
       auth:
         jwt:
           serviceAccountRef:
